@@ -67,3 +67,6 @@ restarter.exception.enabled=false
 restarter.exception.timeout=5
 restarter.inventory.enabled=false
 restarter.inventory.timeout=5
+
+# nothing|hide|shrink
+restarter.onrestart=nothing 
